feat: add database connection
