# backend/src/routes/index.ts
@@ -1,5 +1,4 @@
-export * from "./endpoints";
-export * from "./error";
-export * from "./router";
-export * from "./status";
-export * from "./users";
+export * from './endpoints'
+export * from './error'
+export * from './router'
+export * from './status'
