# backend/src/routes/types.ts
@@ -1,0 +1,55 @@
+import { Express, Request, Response } from 'express'
+import { Database } from '../database/types'
+import { Setting } from '../types'
+
+export type RouterCallback = <T>(request: Request, response: Response, database?: Database, option?: T) => void
+
+export const Responses = {
+  OK: {
+    status: 200,
+    message: 'OK',
+  },
+  ERROR: {
+    status: 500,
+    message: 'Something went wrong',
+  },
+  NOT_FOUND: {
+    status: 404,
+    message: 'Not Found',
+    name: 'Default',
+  },
+}
+
+// eslint-disable-next-line no-shadow
+export enum Requests {
+  get = 'get',
+  post = 'post',
+  put = 'put',
+  delete = 'delete',
+}
+
+// eslint-disable-next-line no-shadow
+export enum Routes {
+  status = '/status',
+  endpoints = '/endpoints',
+  swagger = '/swagger',
+  parseUsers = '/users/parse',
+  getUsers = '/users/all',
+}
+
+export interface Route<T> {
+  enabled: boolean
+  path: Routes
+  type: Requests
+  option?: T
+  callback?: RouterCallback
+  middlewares?: RouterCallback[]
+}
+
+export interface RouterPayload {
+  routes: Route<unknown>[]
+  app: Express
+  view: Setting
+  swagger: Setting
+  database: Database
+}
